--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "kujang",
+    "password": "admin",
     "database": "project_1",
     "host": "127.0.0.1",
     "dialect": "postgres"
