--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "pg": "^8.8.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
